--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/AssadAnabosi/Manager-2.0#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.4"
