feat(login): user login route

--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.4"
   },
   "devDependencies": {
