--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/AssadAnabosi/Manager-2.0#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
