update(admin-account): env vars

--- a/server/config.template.env
+++ b/server/config.template.env
@@ -11,3 +11,11 @@ JWT_EXPIRE=
 
 # Cors Origin
 CLIENT_URL=
+
+# Admin Account
+ADMIN_FIRSTNAME=Administrator
+ADMIN_LASTNAME=Alpha
+ADMIN_USERNAME=admin
+ADMIN_EMAIL=
+ADMIN_PHONE_NUMBER=
+ADMIN_PASSWORD=12345678
