major-feat(sessions)
Refresh tokens

Cookies

Sessions

Login Limiter

--- a/server/config/config.template.env
+++ b/server/config/config.template.env
@@ -4,10 +4,13 @@ PORT=
 # Database URI
 MONGO_URI=
 
-# JWT
+# Auth: JWT - Cookie
 
-JWT_SECRET=
-JWT_EXPIRE=
+JWT_ACCESS_SECRET=
+JWT_ACCESS_EXPIRE=
+JWT_REFRESH_SECRET=
+MAX_AGE=
+SECURE_COOKIE=false
 
 # Cors Origin
 CLIENT_URL=
