--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
     "lucide-react": "^0.292.0",
+    "pulltorefreshjs": "^0.1.22",
     "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.9.1",
+    "@types/pulltorefreshjs": "^0.1.7",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
