--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ client/node_modules
 #ignore .env files
 server/config/config.env
 server/.env
+client/.env
 
 #ignore ssl certificates
 server/config/ssl
