--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.10.0",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
