--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "react-i18next": "^13.5.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
