--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -1,3 +1,6 @@
 {
-    "plugins": ["prettier-plugin-tailwindcss"]
+  "trailingComma": "es5",
+  "semi": true,
+  "singleQuote": false,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
