feat(bun):migrate from nodejs to bun

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,16 +1,16 @@
-FROM node:18-alpine as BUILD_IMAGE  
+FROM oven/bun:1 as BUILD_IMAGE  
 
 WORKDIR /usr/src/app
 
 COPY package.json ./
 
-RUN npm install
+RUN bun install
 
 COPY . .
 
-RUN npm run build
+RUN bunx --bun vite build
 
-FROM node:18-alpine as PRODUCTION_IMAGE
+FROM oven/bun:1 as PRODUCTION_IMAGE
 
 WORKDIR /usr/src/app
 
@@ -19,8 +19,8 @@ COPY --from=BUILD_IMAGE /usr/src/app/dist/ /usr/src/app/dist/
 COPY package.json ./
 COPY vite.config.ts ./
 
-RUN npm install typescript
+RUN bun install typescript
 
 EXPOSE 8080
 
-CMD ["npm", "run", "preview"]
+CMD ["bun", "run", "preview"]
